优化，修复探矿覆盖